--- a/StokTakipOtomasyon/appsettings.json
+++ b/StokTakipOtomasyon/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StokTakipConnectionString": "Server=.\\SQLEXPRESS;Database=StokTakipDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "StokTakipConnectionString": "Server=.\\SQLEXPRESS;Database=StokTakipDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "StokTakipAuthConnectionString": "Server=.\\SQLEXPRESS;Database=StokTakipAuthDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "bbuosyJSSGPOosflUSJ75JJHst6yjjjST5rt65SY77uhSYSko098HHhgst",
+    "Issuer": "https://localhost:7233",
+    "Audience": "https://localhost:7233"
   }
 }
