--- a/StokTakipOtomasyon/StokTakipOtomasyon.csproj
+++ b/StokTakipOtomasyon/StokTakipOtomasyon.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>D:\StopTakipOtomasyon\StokTakip\StokTakipOtomasyon\obj\Debug\net7.0\StokTakipOtomasyon.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
